--- a/frontend/src/styles/Form.css
+++ b/frontend/src/styles/Form.css
@@ -4,11 +4,43 @@
   box-sizing: border-box;
 }
 form h1 {
-  color: grey;
+  color: rgb(243, 243, 243);
+  padding: 1rem;
 }
+
 @media only screen and (min-width: 375px) {
   .formSign {
     min-height: 100vh;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../assets/12.jpg");
+    /* background-image: url("../assets/17.jpg"); */
+    -webkit-backdrop-filter: blur(14.5px);
+    backdrop-filter: blur(50rem);
+    /* background-position: 10% 30%; */
+    background-position: 10% 23%;
+    background-size: cover;
+  }
+  .formProperties {
+    min-height: 100vh;
+    width: 100vw;
+    padding: 2rem;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../assets/12.jpg");
+    -webkit-backdrop-filter: blur(14.5px);
+    backdrop-filter: blur(50rem);
+    background-position: 10% 23%;
+    /* background-size: cover; */
+  }
+  .formProperties div input[type="checkbox"],
+  .formProperties div input[type="radio"] {
+    width: 2rem !important;
+    box-shadow: none !important ;
   }
   .formSign form,
   .formSign .submit,
@@ -17,21 +49,35 @@ form h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
+    /* background-color: #fff; */
     flex-direction: column;
   }
+
+  .formSign form {
+    display: flex;
+    width: 45vw;
+    text-align: center;
+    justify-content: center;
+    backdrop-filter: blur(14.5px);
+    align-items: center;
+    flex-direction: column;
+  }
+
   form div input,
   .formSign .submit button,
-  .formSign .logGoogle button, input {
+  .formSign .logGoogle button,
+  .formSign div input,
+  .formProperties div input {
     width: 21rem;
-    padding: 1rem;
+    padding: 0.5rem;
     outline: none;
     border: 1px solid rgba(128, 128, 128, 0.164);
     margin: 0.2rem;
     color: rgb(0, 0, 0);
     border-radius: 5px;
     box-shadow: 6px -2px 5px #9393937a;
-    }
+    backdrop-filter: blur(14.5px);
+  }
   .formSign .logGoogle {
     flex-direction: row;
     margin-top: 0.8rem;
@@ -46,19 +92,25 @@ form h1 {
     font-size: 0.7rem;
   }
   .errorInputs {
-    margin-bottom: 1rem;
     color: red;
     text-align: center;
   }
-  .submit p {
+  .submit a {
     padding-top: 1rem;
   }
 
-  button:hover, .buttonText:hover{
+  .formSign .buttonText:hover {
     background-color: rgb(223, 223, 223);
   }
-  input:hover {
+  .formSign div input:hover {
     box-shadow: 6px 2px 5px #2e302e7a;
+  }
+  .submit:last-child {
+    min-height: 10rem;
+    justify-content: flex-start;
+  }
+  .submit:last-child > * {
+    margin-bottom: 0.3rem;
   }
 }
 @media only screen and (min-width: 425px) {
@@ -66,23 +118,25 @@ form h1 {
 @media only screen and (min-width: 576px) {
 }
 @media only screen and (min-width: 768px) {
-  form div input,
+  /* form div input,
   .formSign .submit button {
     width: 30rem;
-  }
+  } */
   .formSign .logGoogle button,
   .formSign .logGoogle .buttonText {
     width: 14.8rem;
   }
 }
 @media only screen and (min-width: 991px) {
+  form div input,
+  .formSign .submit button,
+  .formSign .logGoogle button,
+  .formSign div input {
+    width: 39rem;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
-  form div input,
-  .formSign .submit button {
-    width: 50rem;
-  }
 }
 
 @media only screen and (min-width: 1440px) {
